--- a/index.html
+++ b/index.html
@@ -1,155 +1,69 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <title>Mona Mahmoud's Portfolio</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" href="./Assets/css/reset.css" />
-    <link rel="stylesheet" type="text/css" href="./Assets/css/style.css" />
-    <link rel="icon" type="image/x-icon" href="Assets/images/favicon.ico" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="Description" content="Enter your description here" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Mona Mahmoud Portfolio</title>
 </head>
-<body>
-    <div class="flex-container">
-        <div class="flex-item1">
-            <img class="personalpicture" alt="Mona Mahmoud Picture" src="Assets/images/MonaMahmoud.png" />
-        </div>
-        <div class="flex-item2">
-            Mona Mahmoud <br><br><br>
-            Full Stack Web Developer
-        </div>
-        <div class="flex-item3">
-            <nav class="flex-item3">
-                <ul>
-                    <li>
-                        <a href="#About">About Me</a>
-                    </li>
-                    <li>
-                        <a href="#Projects">My Work</a>
-                    </li>
-                    
-                    <li>
-                        <a href="#Resume">My Resume</a>
-                    </li>
-                    <li>
-                        <a href="#ContactInformation">Contact Me!</a>
-                    </li>
-                </ul>
+
+<body class="bg-dark">
+
+    <div class="container">
+        <div class="row align-items-center justify-items-end">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar">
+                <a class="navbar-brand m-2 p-2  pl-0" href="#">
+                    <p class="display-6 link-info">Mona Mahmoud</p>
+                    <p class="display-6 link-info"> Full Stack Web Developer</p>
+                </a>
+                <div class="navbar-nav mx-0 p-0 h2 container justify-items-start ">
+                    <a class="nav-link mx-4 p-0 h2" aria-current="page" href="#">About Me</a>
+                    <a class="nav-link mx-4 p-0 h2" href="#work">My Work</a>
+                    <a class="nav-link mx-2 p-0 h2" href="#resume">My resume</a>
+                    <a class="nav-link mx-4 p-0 h2" href="#contact">Contact Me!</a>
+                </div>
             </nav>
         </div>
+        <div class="row">
+            <div class="col">
+                <img src="assets/images/MonaMahmoud.png" class="img-thumbnail " alt="...">
+            </div>
+            <div class="col text-info h4">Hi there! I am Mona Mahmoud. I hold a bachelor’s degree in computer engineering from Egypt in 2008. I graduated with very good grade and honours degree. I received a distinction grade for my graduation project which was a video editing software
+                developed in Java. After graduation I have completed my software application development diploma at the “Information Technology Institute”. I specialized in Java enterprise track. After that I worked at HP Egypt for one year. I was working
+                on Vodafone Netherlands project. JSP was used under ATG platform. So my job included all web development stages, starting by constructing JSP pages for front end, followed by writing Java code for the desired server side behaviour. In
+                addition to that I performed testing and debugging tasks as well as continuously pushing the code into Github for version control. I am currently in Sydney university doing a full stack web development bootcamp. I’m learning both front-end
+                and back-end technologies like HTML5, CSS3, JavaScript, React.js, Node.js, Python, and MongoDB. We also develop complex group projects and get hands-on weekly assignments. As a result of my education and experiences, I have developed great
+                problem-solving skills through logical thinking. I am also capable of applying an efficient time managing scheme for meeting deadlines through multitasking several tasks simultaneously.</div>
+        </div>
+        <div id="work" class="col text-info h4 text-center">
+
+            <div class="list-group justify-items-center">
+                <a href="https://github.com/MonaMahmoud" target="_blank" class="list-group-item-action list-group-item bg-dark text-danger text-uppercase fs-3 fw-bold text-decoration-underline">My Pinned Repositories:</a>
+
+            </div>
+
+
+        </div>
+        <div id="resume" class="col text-white h4 text-center">
+            <a href="Assets/MonaMahmoudResumeNov2021Updated.docx" target="_blank" class="link-danger p-4">Click to view my resume!</a></div>
+        <div class="row">
+            <div id="contact" class="col text-info h4 text-center">
+
+                <div class="list-group">
+                    <a href="tel:0478487974" class="list-group-item list-group-item-action bg-dark text-white p-4" aria-current="true">
+                    Call Me!
+                </a>
+                    <a href="mailto:monamohamedfahmy@gmail.com" target="_blank" class="list-group-item list-group-item-action bg-dark text-info p-4">Send Me An Email!</a>
+                    <a href="https://www.linkedin.com/in/monamahmoud/" target="_blank" class="list-group-item list-group-item-action bg-dark text-white p-4">Check Out My Linked In Profile!</a>
+                    <a href="https://github.com/MonaMahmoud" target="_blank" class="list-group-item list-group-item-action bg-dark text-info p-4">Check Out My Github Account!</a>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="image"></div>
-    <div class="wrapper">
-        <div class="box worktitle" id="About">
-            <h1>About Me</h1>
-        </div>
-        <div class="box ">
-            My name is Mona Mahmoud. 
-            I hold a bachelor’s degree in computer engineering from Egypt in 2008. 
-            I graduated with very good grade and honours degree. 
-            I received a distinction grade for my graduation project which was a video editing software developed in Java. 
-            After graduation I have completed my software application development diploma at the “Information Technology Institute”. 
-            I specialized in Java enterprise track. After that I worked at HP Egypt for one year. 
-            I was working on Vodafone Netherlands project. JSP was used under ATG platform. 
-            So my job included all web development stages, starting by constructing JSP pages for front end, 
-            followed by writing Java code for the desired server side behaviour. 
-            In addition to that I performed testing and debugging tasks as well as continuously pushing the code into Github for version control. 
-            I am currently in Sydney university doing a full stack web development bootcamp. 
-            I’m learning both front-end and back-end technologies like HTML5, CSS3, JavaScript, React.js, Node.js, Python, and MongoDB. 
-            We also develop complex group projects and get hands-on weekly assignments. 
-            As a result of my education and experiences, I have developed great problem-solving skills through logical thinking. 
-            I am also capable of applying an efficient time managing scheme for meeting deadlines through multitasking several tasks simultaneously.
-        </div>
-        <div class="box worktitle" id="Projects">
-            <h1>My Work</h1>
-        </div>
-        <div class="box nested">
-            <div class="project1">
-                <a href="https://nbs5000.github.io/dateNight/" target="_blank">
-                    <img class="pr1image" src="Assets/images/project1.png" alt="Project 1 Picture">
-                </a>
-            </div>
-            <div class="project">
-                <a href="https://monamahmoud.github.io/JavascriptQuiz/" target="_blank">
-                    <img class="pr1image" src="Assets/images/JSQuiz.png" alt="Project 2 Picture">
-                </a>
-            </div>
-            <div class="project">
-                <a href="https://monamahmoud.github.io/WeatherDashboard/" target="_blank">
-                    <img class="pr1image" src="Assets/images/screenshot1.png" alt="Project 3 Picture">
-                </a>
-            </div>
-            <div class="project">
-                <a href="https://monamahmoud.github.io/MonaMahmoudPortfolioVersion1.0/" target="_blank">
-                    <img class="pr1image" src="Assets/images/full-stack-web-developer.png" alt="Project 4 Picture">
-                </a>
-            </div>
-            <div class="project">
-                <a href="https://monamahmoud.github.io/MonaMahmoudPortfolioVersion1.0/" target="_blank">
-                    <img class="pr1image" src="Assets/images/full-stack-web-developer2.png" alt="Project 5 Picture">
-                </a>
-            </div>
-        </div>
-        <div class="box resumetitle" id="Resume">
-            <h1>My Resume</h1>
-        </div>
-        <div class="box resumecontent">
-            You can view my detailed resume 
-            <a href="Assets/MonaMahmoudResumeNov2021Updated.docx" target="_blank" class="basiclink">here!</a>
-        </div>
-        <div class="box resumetitle" id="ContactInformation"> 
-            <h1>Contact Details</h1>
-        </div>
-
-        <div class="box detailsbox">
-            <ul>
-                <li>
-                    Mobile:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                </li>
-                <li  class="center">
-                    <a href="tel:0478487974" ">0478487974</a>
-                </li>
-                <li>
-                    Email:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                </li>
-                <li class="center"><a href="mailto:monamohamedfahmy@gmail.com" target="_blank" class="basiclink">monamohamedfahmy@gmail.com </a></li>
-                <li>
-                    LinkedIn:&nbsp;&nbsp;&nbsp;
-                </li>
-                <li class="center">
-                    <a href="https://www.linkedin.com/in/monamahmoud/" target="_blank" class="basiclink">https://www.linkedin.com/in/monamahmoud/</a>
-                </li>
-                <li >
-                    Github:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                </li>
-                <li class="center"><a href="https://github.com/MonaMahmoud" target="_blank" class="basiclink">https://github.com/MonaMahmoud</a></li>
-            </ul>
-
-            
-        </div>
-
-
-    </div>
-    <footer>
-        <nav>
-            <ul>
-                <li>
-                    <a href="tel:0478487974" "><span
-                            data-contact="Mobile: +61478487974">Call</span></a>
-                </li>
-                <li>
-                    <a href="mailto:monamohamedfahmy@gmail.com" target="_blank"><span
-                            data-contact="monamohamedfahmy@gmail.com">Email</span></a>
-                </li>
-                <li>
-                    <a href="https://github.com/MonaMahmoud" target="_blank"><span
-                            data-contact="https://github.com/MonaMahmoud">Github</span></a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/monamahmoud/" target="_blank"><span
-                            data-contact="https://www.linkedin.com/in/monamahmoud/">LinkedIn</span></a>
-                </li>
-            </ul>
-        </nav>
-    </footer>
+    <script src="./assets/js/index.js"></script>
 </body>
+
 </html>
