fetching starred repos using GIT API

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
                     <p class="display-6 link-info"> Full Stack Web Developer</p>
                 </a>
                 <div class="navbar-nav mx-0 p-0 h2 container justify-items-start ">
-                    <a class="nav-link mx-4 p-0 h2" aria-current="page" href="#">About Me</a>
-                    <a class="nav-link mx-4 p-0 h2" href="#work">My Work</a>
+                    <a class="nav-link mx-4 p-0 h2" aria-current="page" href="#about">About Me</a>
+                    <a class="nav-link mx-4 p-0 h2" href="#workRow">My Work</a>
                     <a class="nav-link mx-2 p-0 h2" href="#resume">My resume</a>
                     <a class="nav-link mx-4 p-0 h2" href="#contact">Contact Me!</a>
                 </div>
             </nav>
         </div>
-        <div class="row">
+        <div class="row" id="about">
             <div class="col">
                 <img src="assets/images/MonaMahmoud.png" class="img-thumbnail " alt="...">
             </div>
@@ -38,27 +38,28 @@
                 and back-end technologies like HTML5, CSS3, JavaScript, React.js, Node.js, Python, and MongoDB. We also develop complex group projects and get hands-on weekly assignments. As a result of my education and experiences, I have developed great
                 problem-solving skills through logical thinking. I am also capable of applying an efficient time managing scheme for meeting deadlines through multitasking several tasks simultaneously.</div>
         </div>
-        <div id="work" class="col text-info h4 text-center">
+        <div id="workRow" class="row text-info h4 text-center containers">
 
             <div class="list-group justify-items-center">
+
                 <a href="https://github.com/MonaMahmoud" target="_blank" class="list-group-item-action list-group-item bg-dark text-danger text-uppercase fs-3 fw-bold text-decoration-underline">My Pinned Repositories:</a>
 
             </div>
 
 
         </div>
-        <div id="resume" class="col text-white h4 text-center">
-            <a href="Assets/MonaMahmoudResumeNov2021Updated.docx" target="_blank" class="link-danger p-4">Click to view my resume!</a></div>
+        <div id="resume" class="col text-white h4 text-center mt-5 ">
+            <a href="Assets/MonaMahmoudResumeNov2021Updated.docx" target="_blank" class="link-danger p-4 h1">Click to view my resume!</a></div>
         <div class="row">
             <div id="contact" class="col text-info h4 text-center">
 
                 <div class="list-group">
-                    <a href="tel:0478487974" class="list-group-item list-group-item-action bg-dark text-white p-4" aria-current="true">
+                    <a href="tel:0478487974" class="list-group-item list-group-item-action bg-dark text-white p-4 h1" aria-current="true">
                     Call Me!
                 </a>
-                    <a href="mailto:monamohamedfahmy@gmail.com" target="_blank" class="list-group-item list-group-item-action bg-dark text-info p-4">Send Me An Email!</a>
-                    <a href="https://www.linkedin.com/in/monamahmoud/" target="_blank" class="list-group-item list-group-item-action bg-dark text-white p-4">Check Out My Linked In Profile!</a>
-                    <a href="https://github.com/MonaMahmoud" target="_blank" class="list-group-item list-group-item-action bg-dark text-info p-4">Check Out My Github Account!</a>
+                    <a href="mailto:monamohamedfahmy@gmail.com" target="_blank" class="list-group-item list-group-item-action bg-dark text-info p-4 h1">Send Me An Email!</a>
+                    <a href="https://www.linkedin.com/in/monamahmoud/" target="_blank" class="list-group-item list-group-item-action bg-dark text-white p-4 h1">Check Out My Linked In Profile!</a>
+                    <a href="https://github.com/MonaMahmoud" target="_blank" class="list-group-item list-group-item-action bg-dark text-info p-4 h1">Check Out My Github Account!</a>
                 </div>
             </div>
         </div>
