--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         </div>
         <div id="resume" class="col text-white h4 text-center mt-5 ">
-            <a href="Assets/MonaMahmoudResumeNov2021Updated.docx" target="_blank" class="link-danger p-4 h1">Click to view my resume!</a></div>
+            <a href="assets/MonaMahmoudResumeNov2021Updated.docx" target="_blank" class="link-danger p-4 h1">Click to view my resume!</a></div>
         <div class="row">
             <div id="contact" class="col text-info h4 text-center">
 
@@ -64,7 +64,7 @@
             </div>
         </div>
     </div>
-    <script src="./assets/js/index.js"></script>
+    <script src="assets/js/index.js"></script>
 </body>
 
 </html>
