--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="row" id="about">
             <div class="col">
-                <img src="assets/images/MonaMahmoud.png" class="img-thumbnail " alt="...">
+                <img src="Assets/images/MonaMahmoud.png" class="img-thumbnail " alt="...">
             </div>
             <div class="col text-info h4">Hi there! I am Mona Mahmoud. I hold a bachelor’s degree in computer engineering from Egypt in 2008. I graduated with very good grade and honours degree. I received a distinction grade for my graduation project which was a video editing software
                 developed in Java. After graduation I have completed my software application development diploma at the “Information Technology Institute”. I specialized in Java enterprise track. After that I worked at HP Egypt for one year. I was working
@@ -49,7 +49,7 @@
 
         </div>
         <div id="resume" class="col text-white h4 text-center mt-5 ">
-            <a href="assets/MonaMahmoudResumeNov2021Updated.docx" target="_blank" class="link-danger p-4 h1">Click to view my resume!</a></div>
+            <a href="Assets/MonaMahmoudResumeNov2021Updated.docx" target="_blank" class="link-danger p-4 h1">Click to view my resume!</a></div>
         <div class="row">
             <div id="contact" class="col text-info h4 text-center">
 
@@ -64,7 +64,7 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/index.js"></script>
+    <script src="Assets/js/index.js"></script>
 </body>
 
 </html>
