--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="col">
                 <img src="Assets/images/MonaMahmoud.png" class="img-thumbnail " alt="...">
             </div>
-            <div class="col text-info h4">Hi there! I am Mona Mahmoud. I hold a bachelor’s degree in computer engineering from Egypt in 2008. I graduated with very good grade and honours degree. I received a distinction grade for my graduation project which was a video editing software
+            <div class="col-10 text-info h4">Hi there! I am Mona Mahmoud. I hold a bachelor’s degree in computer engineering from Egypt in 2008. I graduated with very good grade and honours degree. I received a distinction grade for my graduation project which was a video editing software
                 developed in Java. After graduation I have completed my software application development diploma at the “Information Technology Institute”. I specialized in Java enterprise track. After that I worked at HP Egypt for one year. I was working
                 on Vodafone Netherlands project. JSP was used under ATG platform. So my job included all web development stages, starting by constructing JSP pages for front end, followed by writing Java code for the desired server side behaviour. In
                 addition to that I performed testing and debugging tasks as well as continuously pushing the code into Github for version control. I am currently in Sydney university doing a full stack web development bootcamp. I’m learning both front-end
